# certchain-program

./: .gitignore  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: walkthrough.md
examples/: credential.sample.json  credentials.batch.sample.json
programs/certchain/: Cargo.toml
programs/certchain/src/: lib.rs
scripts/: batch-issue.ts  hash.ts  issue.ts  query.ts
tests/: certchain.ts
verifier/: index.html
