[package]
name = "certchain"
version = "0.1.0"
description = "CertChain — on-chain academic credential registry (TrustMint, Hack4FUTO 5.0)"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "certchain"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
